src/srt/parser/SimpleCParser.java
// $ANTLR 3.4 /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g 2012-10-18 17:48:11

  package srt.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SimpleCParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ASSERT", "ASSIGNMENT", "ASSUME", "BAND", "BLOCK", "BNOT", "BOR", "BOUND", "BXOR", "COMMENT", "COMPOUND_STATEMENT", "DECL", "DECL_LIST", "DIGIT", "DIVIDE", "EMPTY_STMT", "EQUAL", "GEQ", "GT", "HAVOC", "ID", "IF", "INVARIANT_LIST", "LAND", "LEQ", "LNOT", "LOR", "LSHIFT", "LT", "MOD", "MULTIPLY", "NEQUAL", "NUMBER", "PROGRAM", "RSHIFT", "SUBTRACT", "TERNARY", "UMINUS", "UPLUS", "WHILE", "WHITESPACE", "'('", "')'", "','", "':'", "';'", "'bound'", "'else'", "'int'", "'inv'", "'void'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int ADD=4;
    public static final int ASSERT=5;
    public static final int ASSIGNMENT=6;
    public static final int ASSUME=7;
    public static final int BAND=8;
    public static final int BLOCK=9;
    public static final int BNOT=10;
    public static final int BOR=11;
    public static final int BOUND=12;
    public static final int BXOR=13;
    public static final int COMMENT=14;
    public static final int COMPOUND_STATEMENT=15;
    public static final int DECL=16;
    public static final int DECL_LIST=17;
    public static final int DIGIT=18;
    public static final int DIVIDE=19;
    public static final int EMPTY_STMT=20;
    public static final int EQUAL=21;
    public static final int GEQ=22;
    public static final int GT=23;
    public static final int HAVOC=24;
    public static final int ID=25;
    public static final int IF=26;
    public static final int INVARIANT_LIST=27;
    public static final int LAND=28;
    public static final int LEQ=29;
    public static final int LNOT=30;
    public static final int LOR=31;
    public static final int LSHIFT=32;
    public static final int LT=33;
    public static final int MOD=34;
    public static final int MULTIPLY=35;
    public static final int NEQUAL=36;
    public static final int NUMBER=37;
    public static final int PROGRAM=38;
    public static final int RSHIFT=39;
    public static final int SUBTRACT=40;
    public static final int TERNARY=41;
    public static final int UMINUS=42;
    public static final int UPLUS=43;
    public static final int WHILE=44;
    public static final int WHITESPACE=45;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SimpleCParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SimpleCParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SimpleCParser.tokenNames; }
    public String getGrammarFileName() { return "/home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:33:1: start : 'void' ID '(' declList ')' block EOF -> ^( PROGRAM ID declList block ) ;
    public final SimpleCParser.start_return start() throws RecognitionException {
        SimpleCParser.start_return retval = new SimpleCParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal1=null;
        Token ID2=null;
        Token char_literal3=null;
        Token char_literal5=null;
        Token EOF7=null;
        SimpleCParser.declList_return declList4 =null;

        SimpleCParser.block_return block6 =null;


        Object string_literal1_tree=null;
        Object ID2_tree=null;
        Object char_literal3_tree=null;
        Object char_literal5_tree=null;
        Object EOF7_tree=null;
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_55=new RewriteRuleTokenStream(adaptor,"token 55");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_declList=new RewriteRuleSubtreeStream(adaptor,"rule declList");
        try {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:33:6: ( 'void' ID '(' declList ')' block EOF -> ^( PROGRAM ID declList block ) )
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:34:3: 'void' ID '(' declList ')' block EOF
            {
            string_literal1=(Token)match(input,55,FOLLOW_55_in_start94);  
            stream_55.add(string_literal1);


            ID2=(Token)match(input,ID,FOLLOW_ID_in_start96);  
            stream_ID.add(ID2);


            char_literal3=(Token)match(input,46,FOLLOW_46_in_start98);  
            stream_46.add(char_literal3);


            pushFollow(FOLLOW_declList_in_start100);
            declList4=declList();

            state._fsp--;

            stream_declList.add(declList4.getTree());

            char_literal5=(Token)match(input,47,FOLLOW_47_in_start102);  
            stream_47.add(char_literal5);


            pushFollow(FOLLOW_block_in_start104);
            block6=block();

            state._fsp--;

            stream_block.add(block6.getTree());

            EOF7=(Token)match(input,EOF,FOLLOW_EOF_in_start106);  
            stream_EOF.add(EOF7);


            // AST REWRITE
            // elements: ID, declList, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 34:40: -> ^( PROGRAM ID declList block )
            {
                // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:34:43: ^( PROGRAM ID declList block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, stream_declList.nextTree());

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class declList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declList"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:1: declList : ( decl ( ',' decl )* )? -> ^( DECL_LIST ( decl )* ) ;
    public final SimpleCParser.declList_return declList() throws RecognitionException {
        SimpleCParser.declList_return retval = new SimpleCParser.declList_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal9=null;
        SimpleCParser.decl_return decl8 =null;

        SimpleCParser.decl_return decl10 =null;


        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
        try {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:9: ( ( decl ( ',' decl )* )? -> ^( DECL_LIST ( decl )* ) )
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:11: ( decl ( ',' decl )* )?
            {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:11: ( decl ( ',' decl )* )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==53) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:13: decl ( ',' decl )*
                    {
                    pushFollow(FOLLOW_decl_in_declList128);
                    decl8=decl();

                    state._fsp--;

                    stream_decl.add(decl8.getTree());

                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:18: ( ',' decl )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==48) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:20: ',' decl
                    	    {
                    	    char_literal9=(Token)match(input,48,FOLLOW_48_in_declList132);  
                    	    stream_48.add(char_literal9);


                    	    pushFollow(FOLLOW_decl_in_declList134);
                    	    decl10=decl();

                    	    state._fsp--;

                    	    stream_decl.add(decl10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;

            }


            // AST REWRITE
            // elements: decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 37:33: -> ^( DECL_LIST ( decl )* )
            {
                // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:36: ^( DECL_LIST ( decl )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(DECL_LIST, "DECL_LIST")
                , root_1);

                // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:37:48: ( decl )*
                while ( stream_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_decl.nextTree());

                }
                stream_decl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "declList"


    public static class compoundStmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compoundStmt"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:40:1: compoundStmt : ( statement )* -> ^( COMPOUND_STATEMENT ( statement )* ) ;
    public final SimpleCParser.compoundStmt_return compoundStmt() throws RecognitionException {
        SimpleCParser.compoundStmt_return retval = new SimpleCParser.compoundStmt_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SimpleCParser.statement_return statement11 =null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:40:13: ( ( statement )* -> ^( COMPOUND_STATEMENT ( statement )* ) )
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:41:2: ( statement )*
            {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:41:2: ( statement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ASSERT||LA3_0==ASSUME||(LA3_0 >= HAVOC && LA3_0 <= IF)||LA3_0==WHILE||LA3_0==50||LA3_0==53||LA3_0==56) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:41:2: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_compoundStmt156);
            	    statement11=statement();

            	    state._fsp--;

            	    stream_statement.add(statement11.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 41:16: -> ^( COMPOUND_STATEMENT ( statement )* )
            {
                // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:41:19: ^( COMPOUND_STATEMENT ( statement )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(COMPOUND_STATEMENT, "COMPOUND_STATEMENT")
                , root_1);

                // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:41:40: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compoundStmt"


    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:44:1: statement : ( terminatedStatement ';' !| nonterminatedStatement ) ;
    public final SimpleCParser.statement_return statement() throws RecognitionException {
        SimpleCParser.statement_return retval = new SimpleCParser.statement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal13=null;
        SimpleCParser.terminatedStatement_return terminatedStatement12 =null;

        SimpleCParser.nonterminatedStatement_return nonterminatedStatement14 =null;


        Object char_literal13_tree=null;

        try {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:44:10: ( ( terminatedStatement ';' !| nonterminatedStatement ) )
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:45:2: ( terminatedStatement ';' !| nonterminatedStatement )
            {
            root_0 = (Object)adaptor.nil();


            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:45:2: ( terminatedStatement ';' !| nonterminatedStatement )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ASSERT||LA4_0==ASSUME||(LA4_0 >= HAVOC && LA4_0 <= ID)||LA4_0==50||LA4_0==53) ) {
                alt4=1;
            }
            else if ( (LA4_0==IF||LA4_0==WHILE||LA4_0==56) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:45:2: terminatedStatement ';' !
                    {
                    pushFollow(FOLLOW_terminatedStatement_in_statement178);
                    terminatedStatement12=terminatedStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, terminatedStatement12.getTree());

                    char_literal13=(Token)match(input,50,FOLLOW_50_in_statement180); 

                    }
                    break;
                case 2 :
                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:46:4: nonterminatedStatement
                    {
                    pushFollow(FOLLOW_nonterminatedStatement_in_statement186);
                    nonterminatedStatement14=nonterminatedStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, nonterminatedStatement14.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class nonterminatedStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "nonterminatedStatement"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:49:1: nonterminatedStatement : ( block | ifStatement | whileStatement );
    public final SimpleCParser.nonterminatedStatement_return nonterminatedStatement() throws RecognitionException {
        SimpleCParser.nonterminatedStatement_return retval = new SimpleCParser.nonterminatedStatement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SimpleCParser.block_return block15 =null;

        SimpleCParser.ifStatement_return ifStatement16 =null;

        SimpleCParser.whileStatement_return whileStatement17 =null;



        try {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:49:23: ( block | ifStatement | whileStatement )
            int alt5=3;
            switch ( input.LA(1) ) {
            case 56:
                {
                alt5=1;
                }
                break;
            case IF:
                {
                alt5=2;
                }
                break;
            case WHILE:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:50:4: block
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_block_in_nonterminatedStatement198);
                    block15=block();

                    state._fsp--;

                    adaptor.addChild(root_0, block15.getTree());

                    }
                    break;
                case 2 :
                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:51:4: ifStatement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifStatement_in_nonterminatedStatement203);
                    ifStatement16=ifStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, ifStatement16.getTree());

                    }
                    break;
                case 3 :
                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:52:4: whileStatement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_whileStatement_in_nonterminatedStatement208);
                    whileStatement17=whileStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, whileStatement17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "nonterminatedStatement"


    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:55:1: block : '{' compoundStmt '}' -> ^( BLOCK ( compoundStmt )? ) ;
    public final SimpleCParser.block_return block() throws RecognitionException {
        SimpleCParser.block_return retval = new SimpleCParser.block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal18=null;
        Token char_literal20=null;
        SimpleCParser.compoundStmt_return compoundStmt19 =null;


        Object char_literal18_tree=null;
        Object char_literal20_tree=null;
        RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
        RewriteRuleTokenStream stream_56=new RewriteRuleTokenStream(adaptor,"token 56");
        RewriteRuleSubtreeStream stream_compoundStmt=new RewriteRuleSubtreeStream(adaptor,"rule compoundStmt");
        try {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:55:6: ( '{' compoundStmt '}' -> ^( BLOCK ( compoundStmt )? ) )
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:56:2: '{' compoundStmt '}'
            {
            char_literal18=(Token)match(input,56,FOLLOW_56_in_block217);  
            stream_56.add(char_literal18);


            pushFollow(FOLLOW_compoundStmt_in_block219);
            compoundStmt19=compoundStmt();

            state._fsp--;

            stream_compoundStmt.add(compoundStmt19.getTree());

            char_literal20=(Token)match(input,57,FOLLOW_57_in_block221);  
            stream_57.add(char_literal20);


            // AST REWRITE
            // elements: compoundStmt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 56:23: -> ^( BLOCK ( compoundStmt )? )
            {
                // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:56:26: ^( BLOCK ( compoundStmt )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(BLOCK, "BLOCK")
                , root_1);

                // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:56:34: ( compoundStmt )?
                if ( stream_compoundStmt.hasNext() ) {
                    adaptor.addChild(root_1, stream_compoundStmt.nextTree());

                }
                stream_compoundStmt.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class ifStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ifStatement"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:59:1: ifStatement : IF ^ '(' ! expr ')' ! statement ( options {greedy=true; } : 'else' ! statement )? ;
    public final SimpleCParser.ifStatement_return ifStatement() throws RecognitionException {
        SimpleCParser.ifStatement_return retval = new SimpleCParser.ifStatement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token IF21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        Token string_literal26=null;
        SimpleCParser.expr_return expr23 =null;

        SimpleCParser.statement_return statement25 =null;

        SimpleCParser.statement_return statement27 =null;


        Object IF21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal24_tree=null;
        Object string_literal26_tree=null;

        try {
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:59:12: ( IF ^ '(' ! expr ')' ! statement ( options {greedy=true; } : 'else' ! statement )? )
            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:60:2: IF ^ '(' ! expr ')' ! statement ( options {greedy=true; } : 'else' ! statement )?
            {
            root_0 = (Object)adaptor.nil();


            IF21=(Token)match(input,IF,FOLLOW_IF_in_ifStatement239); 
            IF21_tree = 
            (Object)adaptor.create(IF21)
            ;
            root_0 = (Object)adaptor.becomeRoot(IF21_tree, root_0);


            char_literal22=(Token)match(input,46,FOLLOW_46_in_ifStatement242); 

            pushFollow(FOLLOW_expr_in_ifStatement245);
            expr23=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr23.getTree());

            char_literal24=(Token)match(input,47,FOLLOW_47_in_ifStatement247); 

            pushFollow(FOLLOW_statement_in_ifStatement250);
            statement25=statement();

            state._fsp--;

            adaptor.addChild(root_0, statement25.getTree());

            // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:60:31: ( options {greedy=true; } : 'else' ! statement )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==52) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:60:57: 'else' ! statement
                    {
                    string_literal26=(Token)match(input,52,FOLLOW_52_in_ifStatement262); 

                    pushFollow(FOLLOW_statement_in_ifStatement265);
                    statement27=statement();

                    state._fsp--;

                    adaptor.addChild(root_0, statement27.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ifStatement"


    public static class whileStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "whileStatement"
    // /home/pt1110/workspace/srtool/SR/src/srt/parser/SimpleC.g:63:1: whileStatement : WHILE ^ '(' ! expr ')' ! bound invariantList statement ;
    public final SimpleCParser.whileStatement_return whileStatement() throws RecognitionException {
        SimpleCParser.whileStatement_return retval = new SimpleCParser.whileStatement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token WHILE28=null;
        Token char_literal29=null;
        Token char_literal31=null;
        SimpleCParser.expr_return expr30 =null;

        SimpleCParser.bound_return bound32 =null;

        SimpleCParser.invariantList_return invariantList33 =null;

        SimpleCParser.statement_return statement34 =null;

